# sudoku

./: CMakeLists.txt  README  build_gcc.sh  build_mingw.bat  build_vs.bat  configure_vs.bat  file.sdk
src/: cell.c  cell.h  common.h  curses_ui.c  curses_ui.h  file_io.c  file_io.h  grid.c  grid.h  sudoku.c  sudoku.h  ui.c  ui.h
